@@ -25,6 +25,9 @@ Core and Builtins
 Library
 -------
 
+- Issue #12383: Fix subprocess module with env={}: don't copy the environment
+  variables, start with an empty environment.
+
 - Issue #11584: email.header.decode_header no longer fails if the header
   passed to it is a Header object, and Header/make_header no longer fail
   if given binary unknown-8bit input.
